--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,19 @@ spring:
     name:
       Collab
   datasource:
-    url: jdbc:mysql://localhost:3306/collab
+    url: jdbc:mysql://172.17.0.2:3306/collab
     username: root
     password: ehdus0509!!
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+
+  server:
+    port: 8080
