--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,10 @@ dependencies {
 
 	// swagger 연결
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+
+	// openAI
+	implementation platform("org.springframework.ai:spring-ai-bom:0.8.0")
+	implementation 'org.springframework.ai:spring-ai-openai'
 }
 
 tasks.named('test') {
