--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
+tasks.named('bootJar') {
+    archiveBaseName.set('collab')
+    archiveVersion.set('')  // 버전 제거
+}
+
 group = 'com.louter'
 version = '0.0.1-SNAPSHOT'
 description = 'Collab'
