--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,14 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+	mavenCentral()
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
+}
+
+// Spring AI 버전 변수 설정
+ext {
+	set('springAiVersion', "1.0.0-M1")
 }
 
 dependencies {
@@ -80,8 +87,13 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
 
 	// openAI
-	implementation platform("org.springframework.ai:spring-ai-bom:0.8.0")
-	implementation 'org.springframework.ai:spring-ai-openai'
+	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+	}
 }
 
 tasks.named('test') {
